[workspace]
members = [
    "threadpool",
    "modules",
    "channels",
    "lifetime",
    "scratch",
    "log",
    "smart-pointers",
    "error-handling",
    "flatten",
    "closure",
    "gat",
    "object_pool",
    "sdl-test",
    "gat",
    "anymap",
    "condvar_sync",
    "borrowing_iterator",
]