[workspace]
members = [
    "threadpool",
    "modules",
    "channels",
    "lifetime",
    "scratch",
    "log",
    "smart-pointers",
    "error-handling",
    "flatten",
    "closure",
    "gat",
    "object_pool",
#    "sdl-test", //commented out because it requries vcpkg for whoever is building it
    "gat",
    "anymap",
    "condvar_sync",
    "borrowing_iterator",
    "actix-test",
    "extension-methods",
    "ecs",
    "declarative-macros",
    "event_server",
#    "bindgen-test", //commented out as it's broken atm
]