[package]
name = "actix-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
warp = "0.3"

serde = "1.0"
serde_json = "1.0"
serde_urlencoded = "0.7"
serde_derive = "1.0.136"
pretty_env_logger = "0.4.0"
logger = "0.4.0"