[package]
name = "scratch"
version = "0.1.0"
authors = ["Josh <josue.eduardo206@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.2"
serde = { version = "1.0.117", features = ["derive"] }
bytes = "1.0.1"
streaming-iterator = "0.1.5"
positioned-io = "0.2"
csv = "1.1"
anymap = "0.12.1"